secondfile/objects/DHStatus_Error_Details__c.object
<CustomObject>
    <description>RDS-Deal Hash-Update Deal Hash Details- ASR Details- Access Service Request Statuse- Error Details</description>
    <fields>
        <fullName>Code__c</fullName>
        <description>RDS-Deal Hash-Update Deal Hash Details- ASR Details- Access Service Requests Statuse-Error Details- Code</description>
        <label>Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DHStatus_Access_Service_Request_Statuse__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>RDS-Deal Hash-Update Deal Hash Details- ASR Details- Access Service Requests Statuse-Error Details</description>
        <label>DHStatus-Access Service Request Statuse</label>
        <referenceTo>DHStatus_Access_Service_Request_Statuse__c</referenceTo>
        <relationshipLabel>DHStatus-Error Details</relationshipLabel>
        <relationshipName>DHStatus_Error_Details</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <description>RDS-Deal Hash-Update Deal Hash Details- ASR Details- Access Service Requests Statuse-Error Details-Description</description>
        <label>Description</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>DHStatus-Error Details</label>
    <nameField>
        <displayFormat>ED-{00000}</displayFormat>
        <label>DHStatus-Error Details Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>DHStatus-Error Details</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>